change bg colour in footer

--- a/web/index.html
+++ b/web/index.html
@@ -1026,10 +1026,10 @@
     </section>
 
     <!--CopyRight Page-->
-    <section id="CopyRightPage" class="w-100 h-100" style="background-color: whitesmoke">
+    <section id="CopyRightPage" class="w-100 h-100 bg-dark" >
        <div class="container-fluid w-100"  style="position: relative;top: 300px">
            <!-- Footer -->
-           <footer class="text-center text-lg-start bg-light text-muted w-100 ">
+           <footer class="text-center text-lg-start bg-dark text-muted w-100 ">
                <!-- Section: Social media -->
                <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                    <!-- Left -->
@@ -1152,8 +1152,8 @@
 
                <!-- Copyright -->
                <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-                   © 2021 Copyright:
-                   <a class="text-reset fw-bold" >All right reserved</a>
+                   @ 2021 Copyright:
+                   <p class="text-reset fw-bold" >All right reserved</p>
                </div>
                <!-- Copyright -->
            </footer>
