add buttons to  footer

--- a/web/index.html
+++ b/web/index.html
@@ -1026,15 +1026,15 @@
     </section>
 
     <!--CopyRight Page-->
-    <section id="CopyRightPage" class="w-100 h-100 bg-dark" >
-       <div class="container-fluid w-100"  style="position: relative;top: 300px">
+    <section id="CopyRightPage" class="w-100 h-75 bg-dark" >
+       <div class="container-fluid w-100"  style="position: relative;top: 80px">
            <!-- Footer -->
            <footer class="text-center text-lg-start bg-dark text-muted w-100 ">
                <!-- Section: Social media -->
                <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                    <!-- Left -->
                    <div class="me-5 d-none d-lg-block">
-                       <span>Get connected with us on social networks:</span>
+                       <span>Get connected with us on social networks :</span>
                    </div>
                    <!-- Left -->
 
@@ -1078,6 +1078,16 @@
                                    Here you can use rows and columns to organize your footer content. Lorem ipsum
                                    dolor sit amet, consectetur adipisicing elit.
                                </p>
+                               <div class="mt-5 mb-4 w-50 text-light fs-1 fw-bold text-center" style="background-image: radial-gradient(circle at top,darkcyan,#373b3e);border-radius: 50px">RENT NOW</div>
+                               <button id="btnSighUp" class="btn mt-3 text-center text-dark w-50 bg-warning btn-sm rounded rounded-3 fw-bold" style="display: block;background-image: radial-gradient(circle at top,#86b7fe,#bacbe6);">
+                                   <a href="#contactInfInCompany"></a>
+                                   SIGN UP
+                                   <i class="fas fa-long-arrow-alt-right"></i>
+                               </button>
+                               <button  class="btn mt-3 text-dark text-center w-50 bg-success btn-sm fw-bold" style="background-image: radial-gradient(circle at top,#badbcc,#20c997);">
+                                   CONTACT
+                                   <a href="#contactInfInCompany"><i class="fas fa-long-arrow-alt-right text-dark"></i></a>
+                               </button>
                            </div>
                            <!-- Grid column -->
 
